--- a/L0-1数据结构与算法/01.概述与复杂度.md
+++ b/L0-1数据结构与算法/01.概述与复杂度.md
@@ -1,5 +1,7 @@
 ### 一、理论大纲
 
+> [SY总结](https://www.mianshipai.com/docs/written-exam/algorithm.html )
+
 #### 1. 数据结构与算法简介
 > 数据结构：计算机数据存储，组织数据的方式，如锅碗瓢盆。  
 算法：一系列解决问题的清晰指令，如菜谱。     
