--- a/L0-2JS手写题/02.手写题-「ES」🌟🌟.md
+++ b/L0-2JS手写题/02.手写题-「ES」🌟🌟.md
@@ -360,11 +360,13 @@ console.log(arr1) //[2, 4, 7, 11]
 > reduce() 方法对数组中的每个元素执行一个由您提供的reducer函数(升序执行)，将其结果汇总为单个返回值。  
 不会改变原始数组。
 
-#### a.语法：
+
+a.语法：
+
 ``` 
 arr.reduce(callback(accumulator, currentValue[, index[, array]])[, initialValue])
 ```
-##### callback 执行数组中每个值的函数，包含四个参数：
+callback 执行数组中每个值的函数，包含四个参数：
 
 * `accumulator`
 累计器累计回调的返回值; 它是上一次调用回调时返回**累积值或initialValue**。
@@ -375,7 +377,8 @@ arr.reduce(callback(accumulator, currentValue[, index[, array]])[, initialValue]
 * `array`可选
 **调用reduce()的数组**
 
-#####  `initialValue`可选
+ `initialValue`可选
+
 * **作为第一次调用 callback函数时的第一个参数的值。** 如果没有提供初始值，则将使用数组中的第一个元素。 
 
 注：在没有初始值的空数组上调用 reduce 将报错。
@@ -433,7 +436,7 @@ console.log(arr, arr1) // [1, 3, 6, 10] 6
 <details>
   <summary>千位分隔符-Own</summary>
 
-#### 思路：
+思路：
 
 * 1) 判断是否为数字格式，不是的话返回
 * 2) 用`str.split()`方法将字符串分为小数部分和整数部分
