--- a/L0-2JS手写题/01.手写题-「JS」🌟🌟🌟.md
+++ b/L0-2JS手写题/01.手写题-「JS」🌟🌟🌟.md
@@ -1,18 +1,20 @@
 ### 1、手写深拷贝 
 [参考：深拷贝的终极探索（99%的人都不知道）](https://segmentfault.com/a/1190000016672263) + SY 💛💛
 
+<details>
+  <summary>1-手写递归方法</summary>
+
 > 深拷贝会另外拷贝一份一个一样的对象,
 > 但是不同的是会从堆内存中开辟一个新的区域存放新对象,
 > 新对象跟原对象不再共享内存，修改赋值后的对象b不会改到原对象a。
 
-<details>
-  <summary>1-手写递归方法</summary>
-实现思路：
 
-1.判断是否是对象类型，不是则直接返回
-2.初始化类型：数组或对象
-3.保证key不是原型的属性
-4.递归调用返回值
+> 思路：
+> 1.判断是否是对象类型，不是则直接返回
+> 2.初始化类型：数组或对象
+> 3.保证key不是原型的属性
+> 4.递归调用返回值
+
 ```
 /**
  * 深拷贝
@@ -65,7 +67,7 @@ function deepClone(obj) {
 
 [参考：JavaScript专题之数据库去重](https://github.com/mqyqingfeng/Blog/issues/27) + SY 💛💛
 
-> 前置知识：
+前置知识：
 > indexOf()方法可返回某个指定的元素在数组中首次出现的位置。
 Array.prototype.filter()方法：创建一个新数组, 其包含通过所提供函数实现的测试的所有元素。
 Array.prototype.sort() 方法：对数组的元素进行排序，并返回数组。默认排序顺序是在将元素转换为字符串，然后比较它们的UTF-16代码单元值序列时构建的
@@ -460,7 +462,8 @@ Function.prototype.bind2 = function (context) {
 <details>
   <summary>2、bind方法「Own整理」</summary>
 
-#####  理解bind函数
+理解bind函数:
+
 > bind方法主要的作用是将**函数绑定至某个对象**，当函数f()上调用bind()方法并传入对象o作为参数，这个方法将**返回一个新的函数**。
 
 ```
@@ -470,7 +473,7 @@ var g=f.bind(o)//step3.f函数绑定至o对象, 返回一个新对象赋值给g
 g(2) //3
 ```
 
-#####  思路步骤：  
+思路步骤：  
 1. 在Function原型上定义方法bind1  
 2. 将参数拆解为数组  
 3. 获取this(数组第一项)、及函数传参  
@@ -567,9 +570,10 @@ Function.prototype.apply = function (context, arr) {
 <details>
   <summary>1- flatten方法「SY」</summary>
 
-#### 前置知识-Own：
+前置知识-Own：
 
-##### `Array.prototype.flat(depth)`特性：
+`Array.prototype.flat(depth)`特性：
+
 * `Array.prototype.flat()`[ES10]：用于将嵌套的数组“拉平”，变成一维的数组。该方法返回一个新数组，对原数据没有影响。
 * 不传参数时，默认“拉平”一层
 * 传入一个整数参数，整数即“拉平”的层数
