--- a/L0-2JS手写题/02.手写题-「ES」🌟🌟.md
+++ b/L0-2JS手写题/02.手写题-「ES」🌟🌟.md
@@ -219,7 +219,7 @@ start()
 
       
 
-### 1.for循环，每个值随机[random]另取一个下标，调换俩值
+ a.for循环，每个值随机[random]另取一个下标，调换俩值
 ```
 function reset(arr) {
     for (let i = 0; i < arr.length; i++) {
@@ -232,7 +232,7 @@ function reset(arr) {
 }
 ```
 
-### 2.随机[random]取数组中的某个值，push进新数组，删除原数组该值，直到原数组无值
+b.随机[random]取数组中的某个值，push进新数组，删除原数组该值，直到原数组无值
 
 ```
 function reset(arr) {
@@ -264,7 +264,7 @@ function reset(arr) {
 
       
 
-### 1.下划线转驼峰
+a.下划线转驼峰
 ```
 // hello_world_web => helloWorldWeb
 function translate(str){
@@ -279,7 +279,7 @@ function translate(str){
 }
 ```
 
-### 2.驼峰转下划线
+b.驼峰转下划线
 
 ```
 // helloWorldWeb => hello_world_web 
