--- a/L0-2JS手写题/00.概览.md
+++ b/L0-2JS手写题/00.概览.md
@@ -28,16 +28,20 @@
 #### 10、数组字符串题 [2a2b3c -> aabbccc aabbbccc -> 2a2b3c] 「最右1」--Own待补
 
 -------以下双越在文档查看
-#### 11、手写一个 LazyMan 实现 sleep 机制--SY待补
-#### 12、手写一个 LazyMan 实现 sleep 机制--SY待补
 [手写一个 LazyMan 实现 sleep 机制--SY待补](https://www.mianshipai.com/docs/written-exam/JS-writing.html#%E6%89%8B%E5%86%99%E4%B8%80%E4%B8%AA-lazyman-%E5%AE%9E%E7%8E%B0-sleep-%E6%9C%BA%E5%88%B6)
-#### 13、手写 curry 函数，实现函数柯里化--SY待补充
-#### 14、手写 compose 函数--SY待补充
-#### 15、手写一个 LRU 缓存--SY待补充
+
+#### 11、手写一个 LazyMan 实现 sleep 机制--SY待补
+#### 12、手写 curry 函数，实现函数柯里化--SY待补充
+#### 13、手写 compose 函数--SY待补充
+#### 14、手写一个 LRU 缓存--SY待补充
 
 
+### 03 「vue react」🌟🌟
+-------以下双越在文档查看
 
-
-
-
-### 03 🌟🌟
+#### 1、手写 EventBus 自定义事件
+#### 2、使用 Vue3 Composable 组合式函数，实现 useCount
+#### 3、使用 Vue3 Composable 组合式函数，实现 useRequest
+#### 4、使用 React Hook 实现 useCount
+#### 5、使用 React Hook 实现 useRequest
+#### 6、使用 React Hook 实现 useRequest
