--- a/L0-3JS读代码/01.手写题-Own.md
+++ b/L0-3JS读代码/01.手写题-Own.md
@@ -4,35 +4,36 @@
 
 
 ## JS 编译
-## JS 类型
-## JS 原型
-### 1、prototype「继承、原型链」
-> 参考文件 ./prototype01.js
+
+### 1、编译「变量提升、函数与变量声明优先级」
+
+```
+var func = 1
+function func() {}
+console.log(func + func)
+
+```
 <details>
-  <summary>prototype「继承、原型链」</summary>
+  <summary>结果&分析</summary>
 
 ```
-function A() {}
-var a = new A()
-console.log(a.__proto__ === A.prototype) //true
-console.log(a.prototype) //undefined
-console.log(A.__proto__ === Function.prototype) //true
+结果：2
 ```
 
-1、分析 console.log(a.__proto__ === A.prototype) //true
-- 当使用 new A() 创建对象时，JavaScript会将新创建的对象 a 的内部 [[Prototype]] （在浏览器中通过 __proto__ 访问）指向构造函数 A 的 prototype 属性。
-- 这是JavaScript原型继承机制的核心：实例对象通过 __proto__ 链接到其构造函数的原型对象。
+编译阶段（提升发生） ：
+- JavaScript 引擎在代码执行前会进行编译，此时会将 function func() {} 函数声明提升到当前作用域的顶部
+- 同时也会将 var func 变量声明提升到作用域顶部，但 变量初始化（赋值为1）会留在原地
+- 当函数声明和同名变量声明同时存在时， 函数声明的优先级高于变量声明
 
-2、分析 console.log(a.prototype) //undefined
-- prototype 属性 只存在于函数对象 上，用于存储将被所有实例共享的属性和方法。
-- a 是通过 new A() 创建的普通实例对象，不是函数，因此它没有 prototype 属性。
-
-3、分析 console.log(A.__proto__ === Function.prototype) //true
-- 在JavaScript中， 函数本身也是对象 。当创建函数 A 时，它会被视为 Function 的实例。
-- 因此， A 的内部 [[Prototype]] （即 A.__proto__ ）会指向 Function.prototype ，这体现了JavaScript中函数的原型链结构。
+执行阶段 ：
+- 首先执行 var func = 1 ，这会将之前提升的函数引用覆盖为数值 1
+- 然后执行 function func() {} ，但由于变量已经被赋值，这个函数声明在执行阶段不会生效
+- 最后执行 console.log(func + func) ，此时 func 的值是 1，所以 1 + 1 = 2
 
 </details>
 
+
+## JS 类型
 ## JS this
 ## JS 自由变量
 ## JS 闭包
@@ -108,7 +109,44 @@ promise1 （行19）：创建Promise对象，执行其构造* 函数中的同步
 ## JS 异步执行顺序
 
 
+### 1、手写 Promise「百度1、百度贴吧1」
 
+
+
+
+
+
+### 2、手写 Promise.all「天眼查1、滴滴1、小米2、滴滴1」
+
+[参考：看了就会，手写Promise原理，最通俗易懂的版本！！！](https://juejin.cn/post/6994594642280857630) + SY 💛💛
+
+<details>
+  <summary>手写Promise.all</summary>
+
+```
+static all(promises) {
+  const result = []
+  let count = 0
+  return new MyPromise((resolve, reject) => {
+    const addData = (index, value) => {
+        result[index] = value
+        count++
+        if (count === promises.length) resolve(result)
+    }
+    promises.forEach((promise, index) => {
+        if (promise instanceof MyPromise) {
+            promise.then(res => {
+                addData(index, res)
+            }, err => reject(err))
+        } else {
+            addData(index, promise)
+        }
+    })
+  })
+}
+```
+
+</details>
 
 
 ### 3、手写 Promise.race
@@ -117,21 +155,6 @@ promise1 （行19）：创建Promise对象，执行其构造* 函数中的同步
   <summary>手写 Promise.race「SY」</summary>
 
 ```
-static race(promises) {
-  return new MyPromise((resolve, reject) => {
-    promises.forEach(promise => {
-      if (promise instanceof MyPromise) {
-          promise.then(res => {
-              resolve(res)
-          }, err => {
-              reject(err)
-          })
-      } else {
-          resolve(promise)
-      }
-    })
-  })
-}
 ```
 
 </details>
