--- a/L1-05HTTP网络请求/01.高频-Own.md
+++ b/L1-05HTTP网络请求/01.高频-Own.md
@@ -284,7 +284,7 @@ GraphQL 按需查询
 </details>
 
 
-### 6、在网络层面可做哪些性能优化？「京东1」
+### 6、从输入url到渲染页面的整个过程？「京东1」
 
 [聊一聊前端性能优化](https://juejin.cn/post/7362080157237116978)
 
